@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G3VolTableEntry.cc,v 1.6 2000-11-28 12:07:54 gcosmo Exp $
+// $Id: G3VolTableEntry.cc,v 1.7 2001-05-30 08:13:35 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // modified by I.Hrivnacova, 13.10.99
@@ -170,7 +170,7 @@ void G3VolTableEntry::SetHasNegPars(G4bool hasNegPars) {
 }
 
 void G3VolTableEntry::ClearG3PosCopy(G4int copy) {
-  if (fG3Pos.entries()>0 && copy>=0 && copy<fG3Pos.entries()) 
+  if (fG3Pos.entries()>0 && copy>=0 && copy<G4int(fG3Pos.entries())) 
     fG3Pos.removeAt(copy);
 }
 
@@ -249,7 +249,7 @@ G3VolTableEntry::GetNoClones() {
 
 G3VolTableEntry* 
 G3VolTableEntry::GetDaughter(G4int i) {
-  if (i<fDaughters.entries() && i>=0)
+  if (i<G4int(fDaughters.entries()) && i>=0)
     return fDaughters[i];
   else 
     return 0;
@@ -257,7 +257,7 @@ G3VolTableEntry::GetDaughter(G4int i) {
 
 G3VolTableEntry*
 G3VolTableEntry::GetMother(G4int i){
-  if (i<fMothers.entries() && i>=0)
+  if (i<G4int(fMothers.entries()) && i>=0)
     return fMothers[i];
   else
     return 0;
@@ -274,7 +274,7 @@ G3VolTableEntry::GetMother(){
 
 G3VolTableEntry*
 G3VolTableEntry::GetClone(G4int i){
-  if (i<fClones.entries() && i>=0)
+  if (i<G4int(fClones.entries()) && i>=0)
     return fClones[i];
   else
     return 0;
