@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4gsatt.cc,v 1.8 2000-03-02 17:54:07 gcosmo Exp $
+// $Id: G4gsatt.cc,v 1.9 2001-05-30 08:13:35 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 
 #include "g4rw/cstring.h"
@@ -28,6 +28,6 @@ void PG4gsatt(G4String tokens[])
 void G4gsatt(G4String name, G4String attr, G4int ival)
 {
     // get logical volume pointer
-    G4LogicalVolume *lvol = G3Vol.GetVTE(name)->GetLV();
+    // G4LogicalVolume *lvol = G3Vol.GetVTE(name)->GetLV();
     G4cerr << "G4gsatt not implemented" << G4endl;
 }
