@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4gsdetd.cc,v 1.4 1999-12-05 17:50:12 gcosmo Exp $
+// $Id: G4gsdetd.cc,v 1.5 2001-05-30 08:13:35 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 
 #include "G3toG4.hh"
@@ -33,9 +33,9 @@ void G4gsdetd(G4String chset, G4String chdet, G4int nd, G4String chnmsd[],
               G4int nbitsd[])
 {
     // Get pointer to detector chset
-    G4VSensitiveDetector* sdet = G3Det.GetSD(chset, chdet);
+    // G4VSensitiveDetector* sdet = G3Det.GetSD(chset, chdet);
     // Add hits to sensitive detector
-    for (G4int i=0; i<nd; i++) {
+    // for (G4int i=0; i<nd; i++) {
       // $$$        sdet->AddDigi(chnmsd[i],nbitsd[i]);
-    }
+    // }
 }
