@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4gsdk.cc,v 1.3 1999-12-05 17:50:13 gcosmo Exp $
+// $Id: G4gsdk.cc,v 1.4 2001-05-30 08:13:35 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 
 #include "G4Decay.hh"
@@ -19,7 +19,6 @@ void PG4gsdk(G4String tokens[])
 
     // interpret the parameters
     G4int ipart = Ipar[0];
-    G4int inum = Ipar[1];
     G4int *mode = &Ipar[3];
     G4double *bratio = Rpar;
 
@@ -28,6 +27,7 @@ void PG4gsdk(G4String tokens[])
 
 void G4gsdk(G4int ipart, G4double bratio[], G4int mode[])
 {
+/*
     // create decay object for the particle
     G4Decay *decay = new G4Decay();
     // add decay modes
@@ -39,4 +39,5 @@ void G4gsdk(G4int ipart, G4double bratio[], G4int mode[])
     // associate decay object with particle ipart
     G4ParticleDefinition *part = G3Part.Get(ipart);
 // $$$    part->SetDecay(decay);
+*/
 }
